--- a/index.html
+++ b/index.html
@@ -8,44 +8,44 @@
             <img id="logo" src="https://mars.algoritmika.org/uploads/2020/10/animal-1300243_1280_0_1604070917.png" height="60px"><a href="#shedule">Расписание</a> <a href="#lessons">О занятиях</a> <a href="#photos">Фотографии</a> 
         </header>
         <main>
-            <h1>ТЕСТ <br/>
+            <h1>Club HorseLove <br/>
             <img src="https://mars.algoritmika.org/uploads/2020/10/horse-4475581_1920_0_1604071059.jpg" width="500px"></h1>
-            <h2 id="lessons">Как проходят занятия</h2>
-            <p>На занятиях вы будете не только практиковаться в верховой езде, но и узнаете, как ухаживать за лошадьми. Уже на первом занятии сможете покормить животных. Тренер вместе с вами подберёт вам лошадь, с учётом ваших навыков верховой езды. Вы будете практиковаться верхом на свежем воздухе под контролем тренера, а на более поздних занятиях вас ждёт прогулка по лесу. Научитесь кормить, поить, мыть и расчёсывать вашего скакуна, будете одевать и снимать сбрую. После окончания курса, по договорённости с клубом, можете приезжать на прогулку — навестить своего скакуна, с которым вы обязательно подружитесь.</p>
-            <h2 id="shedule">Расписание занятий</h2>
+            <h2 id="lessons">How classes are held</h2>
+            <p>In the class, you will not only practice horse riding, but also learn how to care for your horses. Already at the first lesson you will be able to feed the animals. Learn to feed, water, wash and brush your horse, put on and take off your harness.</p>
+            <h2 id="shedule">Shedule</h2>
             <table>
                 <tr>
-                    <td>Название <br/>программы</td>
-                    <td>Время <br/>занятий</td>
-                    <td>Длительность <br/>программы</td>
-                    <td>Тренер</td>
+                    <td>he name <br/>of the program</td>
+                    <td>Class <br/>time</td>
+                    <td>Duration <br/>of the program</td>
+                    <td>Trainer</td>
                 </tr>
                 <tr>
-                    <td>Вводный курс</td>
-                    <td>суб. 12-16</td>
-                    <td>3 недели</td>
-                    <td>Попова А.В</td>
+                    <td>Introductory course</td>
+                    <td>sat. 12 p.m. - 4 p.m.</td>
+                    <td>3 weeks</td>
+                    <td>Popova A.V.</td>
                 </tr>
                 <tr>
-                    <td>Пони детям</td>
-                    <td>суб. 10-12</td>
-                    <td>6 месяцев</td>
-                    <td>Веткин П.А.</td>
+                    <td>Pony for children</td>
+                    <td>sat. 10 a.m. - 12 p.m.</td>
+                    <td>6 months</td>
+                    <td>Vetkin P.A.</td>
                 </tr>
                 <tr>
-                    <td>Верхом <br/>свободно</td>
-                    <td>вс. 10-18</td>
-                    <td>1 год</td>
-                    <td>Алёшин М.М.</td>
+                    <td>Riding <br/>freely</td>
+                    <td>sun. 10 a.m. - 6 p.m.</td>
+                    <td>1 year</td>
+                    <td>Alyoshin M.M.</td>
                 </tr>
             </table>
-            <h2 id="photos">Фотографии</h2>
+            <h2 id="photos">Photos</h2>
             <img src="https://mars.algoritmika.org/uploads/2020/10/horse-197199_1920_0_1604056985.jpg" height="200px"><img src="https://mars.algoritmika.org/uploads/2020/10/horses-2904536_1920_0_1604056985.jpg" height="200px"><img src="https://mars.algoritmika.org/uploads/2020/10/mare-4170531_1920_0_1604056985.jpg" height="200px"><br/><img src="https://mars.algoritmika.org/uploads/2020/10/horse-4692916_1920_0_1604078267.jpg" height="200px"><img src="https://mars.algoritmika.org/uploads/2020/10/saddle-792822_1920_0_1604078626.jpg" height="200px" width="265px"><img src="https://mars.algoritmika.org/uploads/2020/10/horse-3419146_1920_0_1604078993.jpg" height="200px" width="268px">
-            <br/><br/><a href="#logo">Наверх</a>
+            <br/><br/><a href="#logo">To the top</a>
         </main>
         <footer>
-            <p>деревня Конная, ферма Сбруевых</p>
-            <p>Тел. 4587-5681</p>
+            <p>Horse village, Sbruevs' farm</p>
+            <p>tel. 4587-5681</p>
         </footer>
     </body>
 </html>
