--- a/index.html
+++ b/index.html
@@ -22,29 +22,29 @@
                 </tr>
                 <tr>
                     <td>Introductory course</td>
-                    <td>sat. 12 p.m. - 4 p.m.</td>
+                    <td>sat. 12 p.m.-4 p.m.</td>
                     <td>3 weeks</td>
                     <td>Popova A.V.</td>
                 </tr>
                 <tr>
                     <td>Pony for children</td>
-                    <td>sat. 10 a.m. - 12 p.m.</td>
+                    <td>sat. 10 a.m.-12 p.m.</td>
                     <td>6 months</td>
                     <td>Vetkin P.A.</td>
                 </tr>
                 <tr>
                     <td>Riding <br/>freely</td>
-                    <td>sun. 10 a.m. - 6 p.m.</td>
+                    <td>sun. 10 a.m.-6 p.m.</td>
                     <td>1 year</td>
                     <td>Alyoshin M.M.</td>
                 </tr>
             </table>
             <h2 id="photos">Photos</h2>
             <img src="https://mars.algoritmika.org/uploads/2020/10/horse-197199_1920_0_1604056985.jpg" height="200px"><img src="https://mars.algoritmika.org/uploads/2020/10/horses-2904536_1920_0_1604056985.jpg" height="200px"><img src="https://mars.algoritmika.org/uploads/2020/10/mare-4170531_1920_0_1604056985.jpg" height="200px"><br/><img src="https://mars.algoritmika.org/uploads/2020/10/horse-4692916_1920_0_1604078267.jpg" height="200px"><img src="https://mars.algoritmika.org/uploads/2020/10/saddle-792822_1920_0_1604078626.jpg" height="200px" width="265px"><img src="https://mars.algoritmika.org/uploads/2020/10/horse-3419146_1920_0_1604078993.jpg" height="200px" width="268px">
-            <br/><br/><a href="#logo">To the top</a>
+            <br/><br/><a href="#logo">Up</a>
         </main>
         <footer>
-            <p>Horse village, Sbruevs' farm</p>
+            <p>Horse village, Sbruevs farm</p>
             <p>tel. 4587-5681</p>
         </footer>
     </body>
