--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <header>
-            <img id="logo" src="https://mars.algoritmika.org/uploads/2020/10/animal-1300243_1280_0_1604070917.png" height="60px"><a href="#shedule">Расписание</a> <a href="#lessons">О занятиях</a> <a href="#photos">Фотографии</a> 
+            <img id="logo" src="https://mars.algoritmika.org/uploads/2020/10/animal-1300243_1280_0_1604070917.png" height="60px"><a href="#shedule">Shedule</a> <a href="#lessons">Lessons</a> <a href="#photos">Photos</a> 
         </header>
         <main>
             <h1>Club HorseLove <br/>
